# SummitAI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  hello.py  pyproject.toml  requirements.txt  run_benchmark.py  server.py
bench_results/: system_info.txt
benchmark/: latencies.csv  system_metrics.csv
static/: index.html
