[project]
name = "ai-meet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "boto3>=1.40.69",
    "elevenlabs>=2.18.0",
    "fastapi>=0.119.0",
    "google-genai>=1.45.0",
    "motor>=3.7.1",
    "openai-whisper>=20250625",
    "python-multipart>=0.0.20",
    "python-socketio>=5.14.2",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.37.0",
]
